<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/application_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.mcgill.ecse321.tamas.MainActivity"
    android:background="#ff1a00">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Application Form"
            android:gravity="center"
            android:textSize="30dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/error_send_application"
            android:textColor="#000"
            android:text="@string/error_send_application"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_adress"
            android:textSize="25dp"

            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="33dp"
            android:id="@+id/student_email"
            android:background="@drawable/border"
            android:textAlignment="center"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:id="@+id/student_past_experience"
            android:hint="@string/past_experince"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:textAlignment="center"
            />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/preference_label"
                android:layout_marginTop="30dp"
                android:textSize="20dp"
                />

            <Spinner
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:entries="@array/preferences"
                android:id="@+id/preference_spinner">
            </Spinner>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/send_application"
            android:onClick="sendApplication"/>
    </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/application_form_backHome"
        android:text="Home"
        android:onClick="backToHomePage"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />




</RelativeLayout>