<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/current_posting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.mcgill.ecse321.tamas.MainActivity"
    android:background="#ff1a00">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currentCourseNumber"
            android:gravity="center"
            android:textSize="30dp"
            android:textStyle="bold"
            android:id="@+id/ourseNumberID"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Job Detail:"
            android:layout_gravity="center"
            android:textSize="30dp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:text="@string/jobDescription"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:layout_weight="3.68"
            android:id="@+id/currentCourseDescription"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/load_application"
            android:layout_gravity="end"
            android:onClick="openApplicationForm"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/current_posting_backHome"
        android:text="Home"
        android:onClick="backToHomePage"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/current_posting_backButton"
        android:text="Back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="backToJobPostings"/>

</RelativeLayout>